finished the logic. Sometimes it sorts. but there are enourmous amount of bugs

--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: anarama <anarama@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/19 11:54:40 by anarama           #+#    #+#              #
-#    Updated: 2024/11/05 14:59:59 by anarama          ###   ########.fr        #
+#    Updated: 2024/11/14 18:49:13 by anarama          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@ CC		:= c++
 
 NAME	:= PmergeMe
 
-CFLAGS	:= -Wall -Wextra -Werror -std=c++98
+CFLAGS	:= -Wall -Wextra -Werror -std=c++98 -g
 
 OBJDIR	:= obj
 
